# app/serializers/post_serializer.rb
@@ -1,0 +1,3 @@
+class PostSerializer < ActiveModel::Serializer
+  attributes :id, :title, :body, :category_id, :user_id
+end
